# raytracer

./: CMakeLists.txt  README.txt  build.sh  classDefinitions.cpp  classDiagram.xmi  doBuildAndRender.sh  timeRendering.py  timeRendering.sh
.svn/: all-wcprops  entries
SceneFiles/: 2lights.xml  2lightsBlinnPhong.xml  2spheres1box.xml  ALittleOfEverything.xml  areaLightTest.xml  bhart_02_2012.xml  mirrors.xml  objTest_00.xml  objTest_01.xml  perlin.xml  rowOfBunnys.xml  test_boxesAndSpheres.xml  test_simpleSceneTwoSpheres_03.xml  threeEggs_ss.xml
SceneFiles/.svn/: all-wcprops  entries
SceneFiles/.svn/text-base/: convertObjTortTriList.cpp.svn-base  glossinessTest.xml.svn-base  objTest_01.xml.svn-base  spheres_1K.xml.svn-base  test_oneSphere.xml.svn-base
SceneFiles/images/.svn/: all-wcprops  entries
SceneFiles/objFiles/.svn/: all-wcprops  entries
SceneFiles/objFiles/.svn/text-base/: buddha.obj.gz.svn-base  dragon.obj.gz.svn-base  icosahedron.obj.svn-base
SceneFiles/oldSceneFiles/: dielectricTest_00.rt  dielectricTest_01.rt  dielectricTest_02.rt  dielectricTest_03.rt  dragons.rt  glossiness.rt  instanceExample.rt  phongExp.rt  simpleSceneThreeLightsPhongIdealDielectric.rt  sphereInstances.rt  test_1KSpheres.rt  test_1MSpheres.rt.REMOVED.git-id  test_AreaLight00.rt  test_glossyFloor.rt  test_simpleSceneThreeLights.rt  test_simpleSceneThreeLightsPhong.rt  test_simpleSceneThreeLightsPhongIdeal.rt
SceneFiles/oldSceneFiles/.svn/: all-wcprops  entries
SceneFiles/oldSceneFiles/.svn/text-base/: bneumann_scene00.rt.svn-base  bneumann_scene01.rt.svn-base  buddhas.rt.svn-base  glossinessIdeal.rt.svn-base  metallicDragons.rt.svn-base  simpleSceneThreeLightsPhongIdealTextured.rt.svn-base  test_AreaLight01.rt.svn-base  test_simpleScene.rt.svn-base  test_simpleSceneThreeLightsPhongIdealDielectric2.rt.svn-base  test_threeInstancedDragons.rt.svn-base  threeEggs.rt.svn-base
SceneFiles/testImages/.svn/: all-wcprops  entries
SceneFiles/testImages/.svn/text-base/: ALittleOfEverything.png.svn-base  areaLightTest.png.svn-base  bhart_01_2012.png.svn-base  objTest_00.png.svn-base  rowOfBunnys.png.svn-base  test_boxesAndSpheres.png.svn-base  test_oneBox_00.png.svn-base  test_oneSphere.png.svn-base  test_simpleSceneTwoSpheres_02.png.svn-base  test_simpleSceneTwoSpheres_03.png.svn-base  test_threeSpheres.png.svn-base  threeEggs.png.svn-base
basisTest/: CMakeLists.txt  main.cpp
benchmarking/: CMakeLists.txt  renderTiming.cpp
benchmarking/hayai/: CMakeLists.txt
cs5721GraphicsLib/: CMakeLists.txt
cs5721GraphicsLib/.svn/: all-wcprops  entries
cs5721GraphicsLib/doc/.svn/: all-wcprops  entries
cs5721GraphicsLib/doc/png++-0.2.5/.svn/: all-wcprops  entries
cs5721GraphicsLib/doc/png++-0.2.5/html/.svn/: all-wcprops  entries
cs5721GraphicsLib/src/: CMakeLists.txt  Timer.cpp  handleGraphicsArgs.cpp  handleGraphicsArgs.h
cs5721GraphicsLib/src/.svn/: all-wcprops  entries
cs5721GraphicsLib/src/.svn/text-base/: SceneDataContainer.h.svn-base  XMLSceneParser.cpp.svn-base  XMLSceneParser.h.svn-base  handleGraphicsArgs.cpp.svn-base  handleGraphicsArgs.h.svn-base  model_obj.cpp.svn-base
cs5721GraphicsLib/src/png++/: error.hpp
cs5721GraphicsLib/src/png++/.svn/: all-wcprops  entries
cs5721GraphicsLib/tests/: CMakeLists.txt  boostThreadExample.cpp  pthreadsExample.cpp  testScene.xml  test_XMLSceneParse.cpp  test_pngWrite.cpp
cs5721GraphicsLib/tests/.svn/: all-wcprops  entries
graphicsLibTest/: Basis.cpp  Basis.h  CMakeLists.txt
raytracer/: CMakeLists.txt  main.cpp
raytracerLib/: AreaLight.cpp  AreaLight.h  BBox.cpp  BBox.h  BBoxTest.cpp  BVHNode.cpp  BVHNode.h  Basis.cpp  Basis.h  BlinnPhongShader.cpp  BlinnPhongShader.h  Box.cpp  Box.h  CMakeLists.txt  Color.cpp  Color.h  ColorGradient.cpp  ColorGradient.h  CosineShader.cpp  CosineShader.h  Cylinder.cpp  Cylinder.h  EngineException.cpp  EngineException.h  ExpTest.cpp  GlazeShader.cpp  GlazeShader.h  ICamera.h  ILight.h  IObject.h  IShader.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Intersection.h  JitteredSampler.cpp  JitteredSampler.h  Matrix.cpp  Matrix.h  (+29 more)
threadEngine/: CMakeLists.txt  Mutex.cpp  Mutex.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  threadPoolTest.cpp  threadTest.cpp
